kubernetes/default/grocy/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grocy
  namespace: default
spec:
  parentRefs:
    - name: external
      namespace: network
  hostnames:
    - grocy.whoverse.nexus
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grocy
          port: 80
